# mcp-subscribe

./: README.md  pyproject.toml  subscribe_mcp_proxy.py  test_subscribe_server.py
examples/: example_client.py
