[project]
name = "mcp-subscribe"
version = "0.1.0"
description = "mcp subscribe proxy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_subscribe"]
